--- a/Toronto1.ipynb
+++ b/Toronto1.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>Capstone - Week 3</h1>"
+    "<h1>Exploring the Neighborhoods in Toronto </h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Utilizing the Foursquare API and data analysis methods to explore and cluster the neighborhoods in North York, Toronto.</h3>"
    ]
   },
   {
