--- a/Toronto3.ipynb
+++ b/Toronto3.ipynb
@@ -2,10 +2,17 @@
     "nbformat_minor": 1, 
     "cells": [
         {
-            "source": "### <h1>Capstone - Week 3 (Skip to part 3)</h1>", 
+            "source": "### <h1>Exploring the Neighborhoods in Toronto (Skip to part 3)</h1>", 
             "cell_type": "markdown", 
             "metadata": {}
         }, 
+        {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>Utilizing the Foursquare API and data analysis methods to explore and cluster the neighborhoods in North York, Toronto.</h3>"
+   ]
+  },
         {
             "source": "<h2>Part 1:</h2>", 
             "cell_type": "markdown", 
